# nix-config

./: README.md  VAULT_DBS.md  disko-config.nix  disko.nix  flake.nix
docs/: Install.md  LevelUp.md  LevelUp.norg  SECRETS.md  ec2-notes.md
docs/slides/: notes.norg
homes/: README.md
lib/: default.nix
lib/audio/: default.nix
lib/deploy/: default.nix
lib/module/: default.nix
modules/: README.md
modules/home/: README.md  TODO.md
modules/nixos/: README.md
overlays/airflow/: default.nix
overlays/bibata-cursors/: default.nix
overlays/comma/: default.nix
overlays/compose2nix/: default.nix
overlays/deploy-rs/: default.nix
overlays/flink/: default.nix
overlays/hyprpaper/: default.nix
overlays/input-leap/: default.nix
overlays/julia/: default.nix
overlays/jupyterlab/: default.nix
overlays/label-studio/: default.nix
overlays/linux/: default.nix
overlays/mlflow/: default.nix
overlays/nextcloud/: default.nix
overlays/nix/: default.nix
overlays/nix-ai/: default.nix
overlays/nix-output-monitor/: default.nix
overlays/nix-snapshotter/: default.nix
overlays/nix-unstable/: default.nix
overlays/nix2sbom/: default.nix
overlays/nixery/: default.nix
overlays/nixvim/: default.nix
overlays/nvidia/: default.nix
overlays/paperless/: default.nix
overlays/python/: default.nix
overlays/qemu/: default.nix
overlays/qtwebengine/: default.nix
shells/default/: default.nix  pyproject.toml
shells/home-buying-decision-analysis/: default.nix  form.csv  main.jl  pyproject.toml
shells/mlflow-serve/: default.nix  pyproject.toml
(+399 files in other folders)
