[tool.poetry]
name = "default"
version = "0.1.0"
description = ""
authors = ["Matt Camp <matt@aiexcalibur.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
setuptools = "^68.2.2"
pandas = "^2.1.2"
jinja2 = "^3.1.2"
tabulate = "^0.9.0"


[build-system]
requires = ["poetry-core>=1.1"]
build-backend = "poetry.core.masonry.api"
