[tool.poetry]
name = "home-buying-decision-analysis"
version = "0.1.0"
description = ""
authors = ["Matt Camp <matt@aiexcalibur.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
redfin = "^0.1.1"
jupyter = "^1.0.0"
qtconsole = "^5.5.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
